--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Genfit</string>
+    <string name="API_KEY">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</string>
 </resources>
