대규모 업뎃

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Genfit</string>
-    <string name="API_KEY">교체부탁</string>
+    <string name="API_KEY">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</string>
 </resources>
