--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Genfit</string>
+    <string name="help_genny">반가워요 !\n저는 인공지능 스타일리스트 Genney에요.\n아래의 태그를 이용하거나, 직접 텍스트를 작성하시면 맞춤형 코디를 생성 해 드립니다.</string>
 </resources>
